--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #86b8c1; }
+  background: #f0cf67; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #740349; }
+  background: #09961e; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #db3f3c; }
+  background: #170e51; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #9ee811; }
+  background: #4d0b48; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #5af633; }
+  background: #e3ff8c; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #9970cb; }
+  background: #7d76fa; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #9e3a40; }
+  background: #81ea1a; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #b017b0; }
+  background: #7e8921; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #ba2f9e; }
+  background: #23ce2a; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #d85461; }
+  background: #986376; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #66fc49; }
+  background: #48ab47; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #786948; }
+  background: #ea8fe0; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #43a896; }
+  background: #4a5760; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #4202e3; }
+  background: #9e0d03; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #95aa79; }
+  background: #c434f6; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #3d8bd6; }
+  background: #e4e5c5; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #c789fd; }
+  background: #f0ec76; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #2f3b02; }
+  background: #73416a; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #a8f684; }
+  background: #2ec48d; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #459f1e; }
+  background: #607f04; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #82c2bf; }
+  background: #ea61ad; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #3554a1; }
+  background: #044472; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #ae18d0; }
+  background: #7c3f19; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #75c903; }
+  background: #9ae57b; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #f1afbd; }
+  background: #eb90ab; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #4e6413; }
+  background: #98b44f; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #a2e945; }
+  background: #c12be7; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #36b8f1; }
+  background: #93c2a3; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #90ea7b; }
+  background: #9c4ec5; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #e7b881; }
+  background: #415a7c; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #b4efb8; }
+  background: #dc2155; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #733986; }
+  background: #2203e8; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #71dde7; }
+  background: #fd6d2e; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #f2eecd; }
+  background: #5bcf14; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #823248; }
+  background: #fc6e84; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #6d0a75; }
+  background: #f9bdf2; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #d34856; }
+  background: #b455b3; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #79c825; }
+  background: #06eed5; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #61b835; }
+  background: #be6550; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #28e05b; }
+  background: #015905; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #65dfb0; }
+  background: #7e2493; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #a295e8; }
+  background: #1fa0dc; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #11afe0; }
+  background: #cc98c1; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #34d7b5; }
+  background: #77b2ec; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #989d5a; }
+  background: #c81cb9; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b0c751; }
+  background: #ea456a; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #a4f9cc; }
+  background: #6c7a5f; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #3adbdc; }
+  background: #3613c3; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #6cc2ae; }
+  background: #13e360; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #33ccbf; }
+  background: #835b8b; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #6f5629; }
+  background: #2655bd; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #886984; }
+  background: #6de6c6; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #72d8f4; }
+  background: #3da574; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #43f5b4; }
+  background: #76086c; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #4f8349; }
+  background: #f23dd2; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #809ff5; }
+  background: #b54c02; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #5323f5; }
+  background: #0601a1; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #5abc18; }
+  background: #36ac94; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #09694c; }
+  background: #2ed858; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #0c86fa; }
+  background: #959739; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #a559f0; }
+  background: #7f453b; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #eb2a8b; }
+  background: #464acf; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #e88217; }
+  background: #87ab79; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #a92830; }
+  background: #f69f3b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #01f833; }
+  background: #4ee26e; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #08dd95; }
+  background: #eb201e; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #298ccf; }
+  background: #ab4565; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #3284c2; }
+  background: #ef2796; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #8256eb; }
+  background: #fb0ba3; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #9a540c; }
+  background: #5e4136; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #20c3cb; }
+  background: #d89e8f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #86f80c; }
+  background: #ea17bb; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #3494ed; }
+  background: #6f4b8e; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #0e1d3d; }
+  background: #1ca0d2; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #6afef0; }
+  background: #ebd474; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #6dbdd6; }
+  background: #be5fcc; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #dbc6d3; }
+  background: #25bd67; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #feffef; }
+  background: #488841; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #f6a917; }
+  background: #d82b63; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #275da3; }
+  background: #5f22c5; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #d5f24d; }
+  background: #64893c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #d0c8fd; }
+  background: #02191f; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #1152ab; }
+  background: #cdf5b4; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #513dd4; }
+  background: #7dff64; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #ddfbe2; }
+  background: #243c55; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #5a6ad5; }
+  background: #0624ca; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #e14e69; }
+  background: #badae8; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #02a43e; }
+  background: #039e1c; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #c51cc7; }
+  background: #f2f082; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #700f2d; }
+  background: #35be63; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #090475; }
+  background: #c382c9; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #453a94; }
+  background: #c9c10f; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #d1c3cd; }
+  background: #2372f8; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #075851; }
+  background: #d2e3d0; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #fa1f35; }
+  background: #d5e3c9; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #06c748; }
+  background: #132a0e; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #be4870; }
+  background: #806e7b; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #04e32b; }
+  background: #d55876; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #2f6a9e; }
+  background: #24f32e; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #eb2b7e; }
+  background: #2a2273; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
