advance config new design

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #abf58e; }
+  background: #10638e; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #6e65d5; }
+  background: #4753eb; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #45d003; }
+  background: #5e2ce1; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #448b18; }
+  background: #65dc22; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #ff2c68; }
+  background: #68bbd0; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #7d3cb2; }
+  background: #fe4e41; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #420ee1; }
+  background: #615ee5; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #5f13fe; }
+  background: #78ba74; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #36a01c; }
+  background: #9e2423; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #f9e769; }
+  background: #776f98; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #f76c19; }
+  background: #d58dc8; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #abe5de; }
+  background: #c0844e; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #46fe27; }
+  background: #101e25; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #6cb23b; }
+  background: #d24c4d; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #d61b5b; }
+  background: #aba509; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #b19738; }
+  background: #b58d10; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #831c21; }
+  background: #9e3148; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #3c1514; }
+  background: #57f564; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #b2e27a; }
+  background: #b6f8c2; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #1ee6a5; }
+  background: #70f710; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #30c7d1; }
+  background: #31e756; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #02a7fc; }
+  background: #f7b724; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4fa4c5; }
+  background: #6ffcbb; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #a65421; }
+  background: #bb6138; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #970bb6; }
+  background: #8ef352; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #f56952; }
+  background: #c49cde; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #ba4285; }
+  background: #e9fcba; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #6ed2a3; }
+  background: #b35f69; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #84c42d; }
+  background: #925c0a; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #aa79c4; }
+  background: #a1f007; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #d86726; }
+  background: #de181e; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #414388; }
+  background: #eb1ec1; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #1bd6a8; }
+  background: #b56edb; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #0da6fb; }
+  background: #daa087; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #adbee1; }
+  background: #e67e97; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #53156d; }
+  background: #cb304d; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #b1d2a2; }
+  background: #3414ea; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #051071; }
+  background: #dd01a5; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #fabd2c; }
+  background: #5c46b7; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #5749f4; }
+  background: #6fc981; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #211434; }
+  background: #714f0c; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #6c2123; }
+  background: #aa2fe8; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #31a9fa; }
+  background: #ba0373; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #ade26e; }
+  background: #925063; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #0cd11f; }
+  background: #3e70d0; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b86b55; }
+  background: #55220e; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #21f391; }
+  background: #f68805; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #8acbee; }
+  background: #f2e0ec; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #e53c6b; }
+  background: #aa5bb1; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #0ccad5; }
+  background: #50dfab; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #9795e0; }
+  background: #9dd1b6; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #d4484f; }
+  background: #7b2d2c; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #9942e9; }
+  background: #ded826; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #e33574; }
+  background: #507f57; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #c3564d; }
+  background: #88aa16; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #ff76e8; }
+  background: #cbea54; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #794341; }
+  background: #94b9d7; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #112c29; }
+  background: #aea8c6; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #c91e1c; }
+  background: #48f505; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #90fc0b; }
+  background: #dbefc7; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #2bcee4; }
+  background: #c0d28f; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #502ff1; }
+  background: #b5bf93; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #763225; }
+  background: #bb3816; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #c70b91; }
+  background: #0596a3; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #133154; }
+  background: #f22eeb; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #bab01e; }
+  background: #250edd; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #a4e348; }
+  background: #b9a373; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #420b5a; }
+  background: #81037c; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #e51ae6; }
+  background: #36b11d; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #481f4c; }
+  background: #dc69e8; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #bfbd5d; }
+  background: #57d33c; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #66d850; }
+  background: #d92875; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #c0fadf; }
+  background: #92beb0; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #780e3e; }
+  background: #2c4264; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #8f5fc4; }
+  background: #307695; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #b883ed; }
+  background: #044e87; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #298bd8; }
+  background: #55e85b; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #5e66d8; }
+  background: #80f42d; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #b0c536; }
+  background: #29aed3; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #538129; }
+  background: #74e74a; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #7a446c; }
+  background: #366014; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #5e1551; }
+  background: #b262cf; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #b33836; }
+  background: #6872c8; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #b130f9; }
+  background: #3cd786; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #e772f6; }
+  background: #6771ec; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #283b39; }
+  background: #dfb2a6; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #71fe83; }
+  background: #a9cb7e; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #1d5144; }
+  background: #bc1b17; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #fa7135; }
+  background: #8ea38a; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #98f97b; }
+  background: #6c926a; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #0aac39; }
+  background: #0da064; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #130b94; }
+  background: #2f6fec; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #97287f; }
+  background: #0d1a51; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #219f51; }
+  background: #6121ae; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f93615; }
+  background: #65b09a; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #c4e373; }
+  background: #8a44bb; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b4d147; }
+  background: #8a6591; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #1ed91c; }
+  background: #77690d; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #4472d3; }
+  background: #f7e6f0; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #e0e7c8; }
+  background: #ababfc; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14000,6 +14000,63 @@ td .check-container {
   background-color: #f4f4f4;
   padding: 20px 30px; }
 
+.field-section-wrapper {
+  background-color: #f4f4f4;
+  padding: 20px 30px; }
+  .field-section-wrapper h3 {
+    margin-bottom: 18px;
+    font-size: 16px; }
+  .field-section-wrapper p {
+    color: #4C4C4C;
+    margin-bottom: 5px; }
+    .field-section-wrapper p input {
+      margin-right: 5px; }
+  .field-section-wrapper .custom-select {
+    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 6'%3e%3cpath fill='%23343a40' d='M2 0L0 0h4zm0 5L0 2h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/10px 20px;
+    background-color: #fff; }
+  .field-section-wrapper .form-group {
+    width: 80%; }
+  .field-section-wrapper .frequency-dropdown-div {
+    display: flex;
+    align-items: center;
+    margin: 15px 0px; }
+    .field-section-wrapper .frequency-dropdown-div p {
+      flex: 1;
+      min-width: 100%;
+      margin-left: 10px; }
+  .field-section-wrapper .hrs-select-group {
+    display: flex;
+    margin-top: 10px; }
+    .field-section-wrapper .hrs-select-group .custom-select {
+      min-width: 75px;
+      margin-right: 10px; }
+      .field-section-wrapper .hrs-select-group .custom-select:last-child {
+        margin-right: 0px; }
+  .field-section-wrapper .week-check-boxs-wrapper {
+    margin: 20px 0px;
+    display: flex; }
+    .field-section-wrapper .week-check-boxs-wrapper a {
+      padding: 11px;
+      background: #FFFFFF;
+      border: 1px solid #C4C4C4;
+      box-sizing: border-box;
+      margin-right: auto;
+      border-radius: 50%;
+      color: #4C4C4C;
+      min-width: 40px;
+      height: 40px;
+      font-size: 16px;
+      text-decoration: none;
+      text-align: center; }
+      .field-section-wrapper .week-check-boxs-wrapper a:last-child {
+        margin-right: 0px; }
+      .field-section-wrapper .week-check-boxs-wrapper a:first-child {
+        margin-left: 0px; }
+    .field-section-wrapper .week-check-boxs-wrapper .week-active {
+      background: #A9A5FD;
+      border: 1px solid #A9A5FD;
+      color: #fff; }
+
 .notification-dropdow-div {
   min-width: auto !important;
   border: 0px solid rgba(0, 0, 0, 0.15);
@@ -14273,6 +14330,9 @@ table .parent-row,
   flex-direction: row !important;
   margin-top: 10px;
   flex: 1; }
+  .new-search-bar-wrapper .search-wrap::before {
+    right: 12px;
+    margin: auto 0 auto auto; }
   .new-search-bar-wrapper .search-right-bar {
     width: 250px;
     position: relative; }
@@ -14381,7 +14441,7 @@ table .parent-row,
     .move-arrow-div:last-child img {
       margin: 10px 0px; }
   .move-arrow-div img {
-    border: 1px solid #776FFF;
+    border: 1px solid #776fff;
     box-sizing: border-box;
     border-radius: 4px;
     padding: 5px; }
@@ -14442,17 +14502,29 @@ table .parent-row,
 
 .right-assets-inventory-div {
   width: 100%; }
+  .right-assets-inventory-div h3 {
+    font-size: 22px;
+    color: #4c4c4c; }
 
 .total-assets-number {
   font-size: 22px; }
   .total-assets-number .total-assets-title {
     font-size: 48px;
-    font-weight: 300;
-    color: #4C4C4C; }
+    font-family: "proxima-nova-light";
+    color: #4c4c4c; }
 
+.device-table-main .child-row td {
+  background: #f6f6f6;
+  background-image: linear-gradient(to right, #e2e2e2 70%, rgba(255, 255, 255, 0) 0%);
+  background-position: bottom;
+  background-size: 1px 1px;
+  background-repeat: repeat-x; }
+.device-table-main .child-row .white-spacer {
+  background: #fff; }
 .device-table-main .table-logos a {
   width: 25px;
-  height: 25px; }
+  height: 25px;
+  border: 1px solid #e2e2e2; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
@@ -14752,7 +14824,26 @@ table .parent-row,
       margin: 0px 10px; }
 
   .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box {
-    max-width: 100% !important; } }
+    max-width: 100% !important; }
+
+  .field-section-wrapper {
+    padding: 20px 15px; }
+    .field-section-wrapper .form-group {
+      width: 100%; }
+      .field-section-wrapper .form-group .frequency-dropdown-div {
+        flex-direction: column; }
+        .field-section-wrapper .form-group .frequency-dropdown-div p {
+          margin-top: 10px; }
+      .field-section-wrapper .form-group .week-check-boxs-wrapper a {
+        min-width: 29px;
+        height: 29px;
+        font-size: 14px;
+        padding: 8px; }
+      .field-section-wrapper .form-group .hrs-select-group {
+        flex-direction: column; }
+        .field-section-wrapper .form-group .hrs-select-group .custom-select {
+          width: 100%;
+          margin: 5px 0px; } }
 /*767 screen end here*/
 /*768 to 1023 screen css*/
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
