--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2212,6 +2212,94 @@ td {
   padding: 20px 30px;
 }
 
+.field-section-wrapper {
+  background-color: #f4f4f4;
+  padding: 20px 30px;
+
+  h3 {
+    margin-bottom: 18px;
+    font-size: 16px;
+  }
+
+  p {
+    color: #4C4C4C;
+    margin-bottom: 5px;
+
+    input {
+      margin-right: 5px;
+    }
+  }
+
+  .custom-select {
+    background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 6'%3e%3cpath fill='%23343a40' d='M2 0L0 0h4zm0 5L0 2h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/10px 20px;
+    background-color: #fff;
+  }
+
+  .form-group {
+    width: 80%;
+  }
+
+  .frequency-dropdown-div {
+    display: flex;
+    align-items: center;
+    margin: 15px 0px;
+
+    p {
+      flex: 1;
+      min-width: 100%;
+      margin-left: 10px;
+    }
+  }
+
+  .hrs-select-group {
+    display: flex;
+    margin-top: 10px;
+
+    .custom-select {
+      min-width: 75px;
+      margin-right: 10px;
+
+      &:last-child {
+        margin-right: 0px;
+      }
+    }
+  }
+
+  .week-check-boxs-wrapper {
+    margin: 20px 0px;
+    display: flex;
+
+    a {
+      padding: 11px;
+      background: #FFFFFF;
+      border: 1px solid #C4C4C4;
+      box-sizing: border-box;
+      margin-right: auto;
+      border-radius: 50%;
+      color: #4C4C4C;
+      min-width: 40px;
+      height: 40px;
+      font-size: 16px;
+      text-decoration: none;
+      text-align: center;
+
+      &:last-child {
+        margin-right: 0px;
+      }
+
+      &:first-child {
+        margin-left: 0px;
+      }
+    }
+
+    .week-active {
+      background: #A9A5FD;
+      border: 1px solid #A9A5FD;
+      color: #fff;
+    }
+  }
+}
+
 .notification-dropdow-div {
   min-width: auto !important;
   border: 0px solid rgba(0, 0, 0, 0.15);
@@ -2574,6 +2662,13 @@ table .parent-row,
   margin-top: 10px;
   flex: 1;
 
+  .search-wrap {
+    &::before {
+      right: 12px;
+      margin: auto 0 auto auto;
+    }
+  }
+
   .search-right-bar {
     width: 250px;
     position: relative;
@@ -2642,7 +2737,6 @@ table .parent-row,
       background: #f6f6f6 !important;
     }
   }
-
 }
 
 .dropdown-div {
@@ -2668,7 +2762,6 @@ table .parent-row,
 
   h3 {
     font-weight: bold;
-    ;
   }
 }
 
@@ -2735,11 +2828,10 @@ table .parent-row,
   }
 
   img {
-    border: 1px solid #776FFF;
+    border: 1px solid #776fff;
     box-sizing: border-box;
     border-radius: 4px;
     padding: 5px;
-
   }
 }
 
@@ -2827,6 +2919,11 @@ table .parent-row,
 
 .right-assets-inventory-div {
   width: 100%;
+
+  h3 {
+    font-size: 22px;
+    color: #4c4c4c;
+  }
 }
 
 .total-assets-number {
@@ -2834,16 +2931,33 @@ table .parent-row,
 
   .total-assets-title {
     font-size: 48px;
-    font-weight: 300;
-    color: #4C4C4C;
+    font-family: "proxima-nova-light";
+    color: #4c4c4c;
   }
 }
 
 .device-table-main {
+  .child-row {
+    td {
+      background: #f6f6f6;
+      background-image: linear-gradient(to right,
+          #e2e2e2 70%,
+          rgba(255, 255, 255, 0) 0%);
+      background-position: bottom;
+      background-size: 1px 1px;
+      background-repeat: repeat-x;
+    }
+
+    .white-spacer {
+      background: #fff;
+    }
+  }
+
   .table-logos {
     a {
       width: 25px;
       height: 25px;
+      border: 1px solid #e2e2e2;
     }
   }
 }
