--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #10638e; }
+  background: #9b8e83; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #4753eb; }
+  background: #064a9f; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #5e2ce1; }
+  background: #9afe85; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #65dc22; }
+  background: #12abf3; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #68bbd0; }
+  background: #194f2c; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #fe4e41; }
+  background: #9c83e8; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #615ee5; }
+  background: #6aa9af; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #78ba74; }
+  background: #399ac8; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #9e2423; }
+  background: #12744e; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #776f98; }
+  background: #c11117; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #d58dc8; }
+  background: #918989; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #c0844e; }
+  background: #fcb583; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #101e25; }
+  background: #d985cf; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #d24c4d; }
+  background: #3bc604; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #aba509; }
+  background: #6a5b03; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #b58d10; }
+  background: #6111e3; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #9e3148; }
+  background: #96a3b4; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #57f564; }
+  background: #ff581f; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #b6f8c2; }
+  background: #e3df52; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #70f710; }
+  background: #344339; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #31e756; }
+  background: #11f197; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #f7b724; }
+  background: #9f076d; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #6ffcbb; }
+  background: #afdf76; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #bb6138; }
+  background: #caa928; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #8ef352; }
+  background: #49888c; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #c49cde; }
+  background: #33db13; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #e9fcba; }
+  background: #896410; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b35f69; }
+  background: #76c46c; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #925c0a; }
+  background: #626659; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #a1f007; }
+  background: #52f348; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #de181e; }
+  background: #b9c120; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #eb1ec1; }
+  background: #dc5964; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #b56edb; }
+  background: #2ed0f1; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #daa087; }
+  background: #159e51; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #e67e97; }
+  background: #b72824; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #cb304d; }
+  background: #80f990; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #3414ea; }
+  background: #c3c945; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #dd01a5; }
+  background: #f9956f; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #5c46b7; }
+  background: #bdc7b0; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #6fc981; }
+  background: #1e07cb; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #714f0c; }
+  background: #e6cb8c; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #aa2fe8; }
+  background: #1df596; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #ba0373; }
+  background: #905386; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #925063; }
+  background: #f7f6ea; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #3e70d0; }
+  background: #9c787e; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #55220e; }
+  background: #a9d6f7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #f68805; }
+  background: #c15f38; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #f2e0ec; }
+  background: #aa0462; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #aa5bb1; }
+  background: #8363f7; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #50dfab; }
+  background: #2966c4; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #9dd1b6; }
+  background: #784810; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #7b2d2c; }
+  background: #d0060d; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #ded826; }
+  background: #214f28; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #507f57; }
+  background: #036a62; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #88aa16; }
+  background: #0fb67d; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #cbea54; }
+  background: #260767; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #94b9d7; }
+  background: #b04d99; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #aea8c6; }
+  background: #c35f2c; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #48f505; }
+  background: #38bb87; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #dbefc7; }
+  background: #e4c5b8; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #c0d28f; }
+  background: #19b49d; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #b5bf93; }
+  background: #d40dc5; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #bb3816; }
+  background: #1c5b63; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #0596a3; }
+  background: #0b9ae0; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #f22eeb; }
+  background: #68b9ff; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #250edd; }
+  background: #bf8c87; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #b9a373; }
+  background: #076331; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #81037c; }
+  background: #24941c; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #36b11d; }
+  background: #3872b3; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #dc69e8; }
+  background: #6809f2; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #57d33c; }
+  background: #7709eb; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #d92875; }
+  background: #45ba8f; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #92beb0; }
+  background: #e4728c; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #2c4264; }
+  background: #27c5b0; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #307695; }
+  background: #8fa051; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #044e87; }
+  background: #c54034; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #55e85b; }
+  background: #2ae730; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #80f42d; }
+  background: #d75af1; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #29aed3; }
+  background: #a13948; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #74e74a; }
+  background: #b30c79; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #366014; }
+  background: #094407; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #b262cf; }
+  background: #adc331; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #6872c8; }
+  background: #2c0dd4; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #3cd786; }
+  background: #d170ff; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #6771ec; }
+  background: #e343db; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #dfb2a6; }
+  background: #9456bb; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #a9cb7e; }
+  background: #3413ac; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #bc1b17; }
+  background: #c80cb0; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #8ea38a; }
+  background: #d6130a; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #6c926a; }
+  background: #26f82e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #0da064; }
+  background: #2b7d58; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #2f6fec; }
+  background: #017265; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #0d1a51; }
+  background: #adb557; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #6121ae; }
+  background: #5bb08f; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #65b09a; }
+  background: #460174; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #8a44bb; }
+  background: #edd149; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #8a6591; }
+  background: #b008ab; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #77690d; }
+  background: #ad1faa; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #f7e6f0; }
+  background: #395307; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ababfc; }
+  background: #17d8a2; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -14015,7 +14015,7 @@ td .check-container {
     background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 6'%3e%3cpath fill='%23343a40' d='M2 0L0 0h4zm0 5L0 2h4z'/%3e%3c/svg%3e") no-repeat right 0.75rem center/10px 20px;
     background-color: #fff; }
   .field-section-wrapper .form-group {
-    width: 80%; }
+    width: 75%; }
   .field-section-wrapper .frequency-dropdown-div {
     display: flex;
     align-items: center;
